--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GitExample</string>
+    <string name="hello_world">Hello from the DragonBoard! Rawr! </string>
+    <string name="action_settings">Settings</string>
 </resources>
